--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
 
 <body>
   <h1>Calculator</h1>
-  <div class="container">
-    <div class="display">0</div>
-    <button>AC</button>
-    <button>+/-</button>
-    <button>%</button>
-    <button>/</button>
-    <button>7</button>
-    <button>8</button>
-    <button>9</button>
-    <button>*</button>
-    <button>4</button>
-    <button>5</button>
-    <button>6</button>
-    <button>-</button>
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>+</button>
-    <button class="zero">0</button>
-    <button>.</button>
-    <button>=</button>
-  </div>
+  <main>
+
+    <div class="container">
+      <div class="display">0</div>
+      <button>AC</button>
+      <button>+/-</button>
+      <button>%</button>
+      <button>/</button>
+      <button class="operand" value="7">7</button>
+      <button class="operand">8</button>
+      <button>9</button>
+      <button>*</button>
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button>-</button>
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>+</button>
+      <button class="zero">0</button>
+      <button>.</button>
+      <button>=</button>
+    </div>
+  </main>
 
 
   <script defer src="index.js"></script>
