--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
       <button>/</button>
       <button class="operand" value="7">7</button>
       <button class="operand">8</button>
-      <button>9</button>
+      <button class="operand">9</button>
       <button>*</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
+      <button class="operand">5</button>
+      <button class="operand">4</button>
+      <button class="operand">6</button>
       <button>-</button>
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
+      <button class="operand">1</button>
+      <button class="operand">2</button>
+      <button class="operand">3</button>
       <button>+</button>
-      <button class="zero">0</button>
+      <button class="operand zero">0</button>
       <button>.</button>
       <button>=</button>
     </div>
