--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
       <div class="display">0</div>
       <button>AC</button>
       <button>+/-</button>
-      <button>%</button>
-      <button>/</button>
+      <button class="operator" value="%">%</button>
+      <button class="operator" value="/">/</button>
       <button class="operand" value="7">7</button>
-      <button class="operand">8</button>
-      <button class="operand">9</button>
-      <button>*</button>
-      <button class="operand">5</button>
-      <button class="operand">4</button>
-      <button class="operand">6</button>
-      <button>-</button>
-      <button class="operand">1</button>
-      <button class="operand">2</button>
-      <button class="operand">3</button>
-      <button>+</button>
-      <button class="operand zero">0</button>
+      <button class="operand" value="8">8</button>
+      <button class="operand" value="9">9</button>
+      <button class="operator" value="*">*</button>
+      <button class="operand" value="4">4</button>
+      <button class="operand" value="5">5</button>
+      <button class="operand" value="6">6</button>
+      <button class="operator" value="-">-</button>
+      <button class="operand" value="1">1</button>
+      <button class="operand" value="2">2</button>
+      <button class="operand" value="3">3</button>
+      <button class="operator" value="+">+</button>
+      <button class="operand zero" value="0">0</button>
       <button>.</button>
-      <button>=</button>
+      <button class="operator" value="=">=</button>
     </div>
   </main>
 
