--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button class="operand" value="3">3</button>
       <button class="operator" value="+">+</button>
       <button class="operand zero" value="0">0</button>
-      <button>.</button>
+      <button class="operand" value=".">.</button>
       <button class="operator" value="=">=</button>
     </div>
   </main>
