Add operator functionality, addition, subtraction etc.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button class="operator" value="+">+</button>
       <button class="operand zero" value="0">0</button>
       <button class="operand" value=".">.</button>
-      <button class="operator" value="=">=</button>
+      <button class="compute" value="=">=</button>
     </div>
   </main>
 
