Fix error in display after computing, added some additional styling

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
   <h1>Calculator</h1>
   <main>
-
     <div class="container">
       <div class="display">0</div>
-      <button>AC</button>
-      <button>+/-</button>
+      <button class="clear">AC</button>
+      <button class="negative">+/-</button>
       <button class="operator" value="%">%</button>
       <button class="operator" value="/">/</button>
       <button class="operand" value="7">7</button>
