Fix checkDecimal function, added multiple decimals when it shouldnt

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="display">0</div>
       <button class="clear">AC</button>
-      <button class="negative">+/-</button>
+      <button class="negative">DEL</button>
       <button class="operator" value="%">%</button>
       <button class="operator" value="/">/</button>
       <button class="operand" value="7">7</button>
