--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="container">
       <div class="display">0</div>
       <button class="clear">AC</button>
-      <button class="negative">DEL</button>
+      <button class="delete">DEL</button>
       <button class="operator" value="%">%</button>
       <button class="operator" value="/">/</button>
       <button class="operand" value="7">7</button>
       <button class="operand" value="8">8</button>
       <button class="operand" value="9">9</button>
-      <button class="operator" value="*">*</button>
+      <button class="operator" value="x">x</button>
       <button class="operand" value="4">4</button>
       <button class="operand" value="5">5</button>
       <button class="operand" value="6">6</button>
