--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="display">0</div>
       <button class="clear">AC</button>
       <button class="delete">DEL</button>
-      <button class="operator" value="%">%</button>
+      <button class="percent" value="%">%</button>
       <button class="operator" value="/">/</button>
       <button class="operand" value="7">7</button>
       <button class="operand" value="8">8</button>
